# survey_stats

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pylintrc  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  README.md  README.rst  analysis.R  bootstrap.sh  conda_env.yml  conftest.py  develop.sh  docker-compose.test.yml  docker-compose.yml  docker-stack.yml  pylintrc  requirements-dev.txt  requirements-noconda.txt  requirements.txt  run.sh  run_server.sh  run_worker.sh  setup.cfg  setup.py  test_harness.py  tox.ini  uwsgi.ini
.github/: dependabot.yml
config/: README.md  db-monet-swarm.yaml
config/data/: brfss.yaml  brfss_pre2011.yaml  prams.yaml  prams_p2011.yaml  yrbss.yaml
config/db/: db-default.yaml  db-monet-local.yaml
data/: YRBS_2015_SPSS_Syntax.sps  brfs.yaml  brfss.yaml  prams.yaml  yrbs2015.dat.REMOVED.git-id  yrbss.yaml
data/brfss/: README.md  annual_survey_files.csv
data/yrbss/: 2015-sadc-spss-input-program.sps  YRBS1993.dat.REMOVED.git-id  YRBS1995.dat.REMOVED.git-id  YRBS1997.dat.REMOVED.git-id  YRBS1999.dat.REMOVED.git-id  YRBS2001.dat.REMOVED.git-id  YRBS2003.dat.REMOVED.git-id  YRBS2005.dat.REMOVED.git-id  YRBS2007.dat.REMOVED.git-id  YRBS2009.dat.REMOVED.git-id  YRBS_1993_SPSS_Syntax.sps  YRBS_1995_SPSS_Syntax.sps  YRBS_1997_SPSS_Syntax.sps  YRBS_1999_SPSS_Syntax.sps  YRBS_2001_SPSS_Syntax.sps  YRBS_2003_SPSS_Syntax.sps  (+9 more)
deploy/: Dockerfile  playbook.yml
docs/: conf.py  installation.rst  usage.rst
requirements/: requirements-conda.txt  requirements-dev.txt  requirements-noconda.txt
static/: survey-stats-architecture.xml
tests/: test_etl.py  test_survey.py  test_survey_stats.py
(+57 files in other folders)
