[metadata]
name = survey_stats
author = Ajish George @ SemanticBits
author-email = yell@aji.sh
summary = Process and serve pre-computed and on-demand survey analysis statistics for various public datasets (CDC focused).
license = BSD
description-file =
    README.md
home-page = http://pypi.python.org/pypi/survey_stats
requires-python = >=3.6
classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
 
[files]
packages_root = src
packages =
    survey_stats

[entry_points]
console_scripts =
    survey_stats = survey_stats.cli:main

[build_sphinx]
builders = html,man
source-dir = doc/source
build-dir = doc/build
all-files = 1

[extras]
testing = 
    dev

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 140
exclude = tests/*,*/migrations/*,*/south_migrations/*

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    dist
    build
    south_migrations
    migrations
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -rxEfsw
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
markers =
    single: mark a test as single cpu only
    slow: mark a test as slow
    network: mark a test as network
    highmemory: mark a test as a high-memory only

[isort]
force_single_line=True
line_length=120
known_first_party=survey_stats
default_section=THIRDPARTY
forced_separate=test_survey_stats
not_skip = __init__.py
skip = migrations, south_migrations
